test/fail/integration/_fail_sem_expr_funct_call_1.hs
y :: Int
y = x [1,2,3]
main = print "hello"